<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:layout_weight="5"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="2" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/frag_app_header"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/userheader" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="3"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/frag_app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="陈明毅"
                        android:textColor="@color/hinttextColor"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:baselineAligned="false"
                        android:orientation="horizontal" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/frag_app_bindnum"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="已绑定"
                                android:textColor="@color/hinttextColor"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/frag_app_device"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="3 台设备"
                                android:textColor="@color/hinttextColor"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:baselineAligned="false"
                        android:orientation="horizontal" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/frag_app_lastwhere"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="上次登录"
                                android:textColor="@color/hinttextColor"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/frag_app_log"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="14/05/11"
                                android:textColor="@color/hinttextColor"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/personLook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:drawableRight="@drawable/arrow"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/personLook"
                    android:textColor="@color/contents_text"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/personBind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/button"
                    android:drawableRight="@drawable/arrow"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/personBind"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/personUnbind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/button"
                    android:drawableRight="@drawable/arrow"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/personUnbind"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/personSettingfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/button"
                    android:drawableRight="@drawable/arrow"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/personSettingfile"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>